--- a/about/index.html
+++ b/about/index.html
@@ -138,11 +138,11 @@
                         
                      <h3 class="mb-0"><FONT COLOR=000000>Newscast Reel</h3>
                             <p>Produced 30-minute newscasts for Capital News Service (TV). This reel will be updated throughout the fall/winter. </p>
-                <li> <a hefr="https://www.youtube.com/live/kz1XZfOXDh0?si=gHlpJmPUkFn7OWt7" class="download-button" target="_blank">(10/3/24) Newscast - First of the semester</a></p></li>
+                <li> <a href="https://www.youtube.com/live/kz1XZfOXDh0?si=gHlpJmPUkFn7OWt7" class="download-button" target="_blank">(10/3/24) Newscast - First of the semester</a></p></li>
                         <br>
                             <h3 class="mb-0"><FONT COLOR=000000>Video/Feature Packages</h3>
                             <p>Video/feature packages from <a href="https://terrapinsportscentral.com" target="_blank"> Terrpain Sports Central</a> and courses at Merrill College.</p>
-                <li> <a hefr="https://8bg.474.myftpupload.com/decades-of-dominance-maryland-field-hockey-celebrates-50-seasons-of-tradition/"target="_blank">(9/9/24) Decades of Dominance: Maryland Field Hockey celebrates 50 seasons of tradition</a></p></li>
+                <li> <a href="https://8bg.474.myftpupload.com/decades-of-dominance-maryland-field-hockey-celebrates-50-seasons-of-tradition/"target="_blank">(9/9/24) Decades of Dominance: Maryland Field Hockey celebrates 50 seasons of tradition</a></p></li>
                 <li> <a href="https://8bg.474.myftpupload.com/marylands-building-champions-campaign-is-in-full-swing-heres-how-its-going/" target="_blank">(4/24/24) Maryland’s ‘Building Champions’ campaign is in full swing – here’s how it’s going</a></p></li>
                 <li><a href="https://drive.google.com/file/d/1lRUAF1qDzNXVoaHEUzyN0pVE0H23Y6wo/view?usp=sharing" target="_blank">(4/4/24) Washington D.C. Cherry Blossoms are back, but early</a></p></li>
              
