--- a/about/index.html
+++ b/about/index.html
@@ -142,6 +142,7 @@
                         <br>
                             <h3 class="mb-0"><FONT COLOR=000000>Video/Feature Packages</h3>
                             <p>Video/feature packages from <a href="https://terrapinsportscentral.com" target="_blank"> Terrpain Sports Central</a> and courses at Merrill College.</p>
+                <li> <a href="https://youtu.be/i8fpC7kDDDg?si=R1odA2aevpzHCcP7"target="_blank">(11/18/24)ONE-ON-ONE: TSC's Eddy Calkins sits down with Maryland women's basketball head coach Brenda Frese</a></p></li>
                 <li> <a href="https://8bg.474.myftpupload.com/decades-of-dominance-maryland-field-hockey-celebrates-50-seasons-of-tradition/"target="_blank">(9/9/24) Decades of Dominance: Maryland Field Hockey celebrates 50 seasons of tradition</a></p></li>
                 <li> <a href="https://8bg.474.myftpupload.com/marylands-building-champions-campaign-is-in-full-swing-heres-how-its-going/" target="_blank">(4/24/24) Maryland’s ‘Building Champions’ campaign is in full swing – here’s how it’s going</a></p></li>
                 <li><a href="https://drive.google.com/file/d/1lRUAF1qDzNXVoaHEUzyN0pVE0H23Y6wo/view?usp=sharing" target="_blank">(4/4/24) Washington D.C. Cherry Blossoms are back, but early</a></p></li>
@@ -181,6 +182,8 @@
                 <p>  <div class="flex-grow-1">
                             <h3 class="mb-0"><FONT COLOR=000000>Highlight/Game Recap Packages </h3>
                             <p>Game highlight videos with stand-ups/"liveshots." Video recap packages are filmed and edited on the same day.</p>
+                      <li><a href="https://youtu.be/-HFCCMremhk" target="_blank">(11/25/24) Maryland men’s soccer eliminated in second round with 2-1 loss to Wake Forest</a></p></a>
+                        </li>
 
                  <li><a href="https://youtu.be/zuw4O6Xo9Jo?si=-CsKowx12bwuAGhj" target="_blank">(9/7/24) PREVIEW: Maryland Football versus Michigan State</a></p></a>
                         </li>
