--- a/about/index.html
+++ b/about/index.html
@@ -140,7 +140,7 @@
                         
                      <h3 class="mb-0"><FONT COLOR=000000>Newscast Reel</h3>
                             <p>Produced 30-minute newscasts for Capital News Service (TV). This reel will be updated throughout the fall/winter. </p>
-                <li> <a href="Eddy Calkins - Producer Reel" class="download-button" target="_blank">Eddy Calkins - Fall 2024 Producer Reel </a></p></li>
+                <li> <a href="https://youtu.be/wrfGBeGLJU0" class="download-button" target="_blank">Eddy Calkins - Fall 2024 Producer Reel </a></p></li>
                         <br>
                             <h3 class="mb-0"><FONT COLOR=000000>Video/Feature Packages</h3>
                             <p>Video/feature packages from <a href="https://terrapinsportscentral.com" target="_blank"> Terrpain Sports Central</a> and courses at Merrill College.</p>
