--- a/about/index.html
+++ b/about/index.html
@@ -142,6 +142,10 @@
                             <p>Produced 30-minute newscasts for Capital News Service (TV). This reel will be updated throughout the fall/winter. </p>
                 <li> <a href="https://youtu.be/wrfGBeGLJU0" class="download-button" target="_blank">Eddy Calkins - Fall 2024 Producer Reel </a></p></li>
                         <br>
+                        <h3 class="mb-0"><FONT COLOR=000000>Sideline Reporter Reel</h3>
+                            <p>Reel of sideline reporting on-air hits during Big Ten Plus live broadcasts. </p>
+                <li> <a href="https://youtu.be/wrfGBeGLJU0" class="download-button" target="_blank">Eddy Calkins - Sideline Reporter Reel </a></p></li>
+                        <br>
                             <h3 class="mb-0"><FONT COLOR=000000>Video/Feature Packages</h3>
                             <p>Video/feature packages from <a href="https://terrapinsportscentral.com" target="_blank"> Terrpain Sports Central</a> and courses at Merrill College.</p>
                 <li> <a href="https://youtu.be/i8fpC7kDDDg?si=R1odA2aevpzHCcP7"target="_blank">(11/18/24) ONE-ON-ONE: TSC's Eddy Calkins sits down with Maryland women's basketball head coach Brenda Frese</a></p></li>
