--- a/about/index.html
+++ b/about/index.html
@@ -51,7 +51,7 @@
                         
                     </div>
                     <p class="lead mb-5"><FONT COLOR=000000>Hello! My name is Eddy Calkins and I am a current sophomore at the University of Maryland, College Park. I am majoring in journalism at the Philip Merrill College of Journalism with a minor in linguistics. My primary focus is broadcast journalism (producing and reporting). <br><br>I coded this website  with HTML/CSS and uploaded it via Github. Use the navigation buttons or scorll down to view my portfolio and resume. Don't hesitate to reach out if you have any questions!</p>
-                        <p>Download my resume below:<br>  <a href="ejc/about/calkins-eddy-resume.pdf" download="ejc/about/calkins-eddy-resume.pdf" class="download-button" target="_blank">calkins-eddy-resume.pdf</a>    <br> <br></p>
+                        <p>Download my resume below:<br>  <a href="calkins-eddy-resume.pdf" download="calkins-eddy-resume.pdf" class="download-button" target="_blank">calkins-eddy-resume.pdf</a>    <br> <br></p>
                          <p>View my updated producer reel below:<br>  <a href="https://youtu.be/wrfGBeGLJU0" class="download-button" target="_blank">Eddy Calkins - Producer Reel</a>    <br> <br></p>
 
                            
@@ -127,7 +127,7 @@
                 </div>-->
                 <br>
                 <br>
-<embed src="ejc/about/calkins-eddy-resume.pdf" width="700px" height="850px"  />.
+<embed src="calkins-eddy-resume.pdf" width="700px" height="850px"  />.
 <br>
 <br>
             </section>
