--- a/about/index.html
+++ b/about/index.html
@@ -50,7 +50,7 @@
                        <a href="mailto:name@email.com"" ><FONT COLOR=000000><eddycalkins3@gmail.com> <text-decoration: black; border-bottom:1px solid red;></text-decor>eddycalkins3@gmail.com</a>
                         
                     </div>
-                    <p class="lead mb-5"><FONT COLOR=000000>Hello! My name is Eddy Calkins and I am a current sophomore at the University of Maryland, College Park. I am majoring in journalism at the Philip Merrill College of Journalism with a minor in linguistics. My primary focus is broadcast journalism (producing and reporting). <br><br>I coded this website  with HTML/CSS and uploaded it via Github. Use the navigation buttons or scorll down to view my portfolio and resume. Don't hesitate to reach out if you have any questions!</p>
+                    <p class="lead mb-5"><FONT COLOR=000000>Hello! My name is Eddy Calkins and I am a current senior at the University of Maryland, College Park. I am majoring in journalism at the Philip Merrill College of Journalism with a minor in linguistics. My primary focus is broadcast journalism (producing and reporting). <br><br>I coded this website  with HTML/CSS and uploaded it via Github. Use the navigation buttons or scorll down to view my portfolio and resume. Don't hesitate to reach out if you have any questions!</p>
                         <p>Download my resume below:<br>  <a href="calkins-eddy-resume.pdf" download="calkins-eddy-resume.pdf" class="download-button" target="_blank">calkins-eddy-resume.pdf</a>    <br> <br></p>
                          <p>View my updated producer reel below:<br>  <a href="https://youtu.be/wrfGBeGLJU0" class="download-button" target="_blank">Eddy Calkins - Producer Reel</a>    <br> <br></p>
 
