--- a/about/index.html
+++ b/about/index.html
@@ -71,7 +71,7 @@
             <section class="resume-section" id="resume"> 
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience <FONT COLOR=800000></h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <!--div class="d-flex flex-column flex-md-row justify-content-between mb-5"><!-->
                     
                         <div class="flex-grow-1">
                             <h3 class="mb-0"> <FONT COLOR=800000>Reporter/Producer/Production Member</h3>
@@ -125,7 +125,6 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><FONT COLOR=800000> May 2023 - August 2023 & June 2024 - August 2024</span></div>
                     </div>
-                </div>-->
                 <br>
                 <br>
 <!--embed src="calkins-eddy-resume.pdf" width="700px" height="850px"  />.
