--- a/about/index.html
+++ b/about/index.html
@@ -73,7 +73,7 @@
                     <h2 class="mb-5">Experience <FONT COLOR=800000></h2>
                     <!--div class="d-flex flex-column flex-md-row justify-content-between mb-5"><!-->
                     
-                        <div class="flex-grow-1">
+                        <!--div class="flex-grow-1"><!-->
                             <h3 class="mb-0"> <FONT COLOR=800000>Reporter/Producer/Production Member</h3>
                             <div class="subheading mb-3"><FONT COLOR=000000>Capital News Service (TV) | College Park, MD</div>
                             <p>
@@ -211,7 +211,7 @@
                             <h3 class="mb-0"><FONT COLOR=000000>Baltimore Fishbowl</h3>
                             <p>Over 10 weeks, I wrote over 30 stories - both hard news and longer feature stories. You can find all of them <a href="https://baltimorefishbowl.com/stories/author/eddy-calkins/" class="download-button" target="_blank">here</a><br>
                             </p>
-                    <li><a href="https://baltimorefishbowl.com/stories/new-baltimore-made-tv-show-goes-viral-and-its-just-the-pilot-episode/" target="_blank">(8/8/25 - PAGE 6) New Baltimore-made TV show goes viral – and it’s just the pilot episode</a></p></a> (one of the most engaged with stories on Baltimore Fishbowl's social media)
+                    <li><a href="https://baltimorefishbowl.com/stories/new-baltimore-made-tv-show-goes-viral-and-its-just-the-pilot-episode/" target="_blank">(8/8/25) New Baltimore-made TV show goes viral – and it’s just the pilot episode</a></p></a> (one of the most engaged with stories on Baltimore Fishbowl's social media)
                         </li>
                     <li><a href="https://baltimorefishbowl.com/stories/hcc-faculty-union-reaches-tentative-deal-for-first-ever-union-contract-secure-4-raise/" target="_blank" class="download-button">(8/11/25) HCC faculty union reaches tentative deal for first-ever union contract, secure 4% raise</a></p></a> (first to report the news of a tentative contract)
                         </li>
