--- a/about/index.html
+++ b/about/index.html
@@ -83,9 +83,9 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><FONT COLOR=800000>September 2024 - Present</span></div>
                     </div>
-                    
+                    <!-->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
+                        <div class="flex-grow-1"><!-->
                             <h3 class="mb-0"><FONT COLOR=800000>Executive Producer</h3>
                             <div class="subheading mb-3"><FONT COLOR=000000>Terrapin Sports Central | College Park, MD</div>
                             <p>
@@ -95,8 +95,9 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><FONT COLOR=800000>April 2025 - Present</span></div>
                     </div>
+        <!-->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
+                        <div class="flex-grow-1"><!-->
                             <h3 class="mb-0"><FONT COLOR=800000>Summer News Intern </h3>
                             <div class="subheading mb-3"><FONT COLOR=000000>Baltimore Fishbowl | Baltimore, MD </div>
                             <p>
@@ -106,8 +107,9 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><FONT COLOR=800000>June 2025 - August 2025</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
+                 <!-->
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1"><!-->
                             <h3 class="mb-0"><FONT COLOR=800000>Contributor</h3>
                             <div class="subheading mb-3"><FONT COLOR=000000>Baltimore Sun Media Group | Howard County, MD</div>
                             <p> <li>Pitched hard news and feature stories that were published in The Howard County Times & The Carroll County Times (Managed by the Baltimore Sun Media Group)</li>
@@ -115,8 +117,9 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><FONT COLOR=800000>September  2023 - November 2023</span></div>
                     </div><br><br>
-                        <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
+                 <!-->
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1"><!-->
                             <h3 class="mb-0"><FONT COLOR=800000>News Intern</h3>
                             <div class="subheading mb-3"><FONT COLOR=000000>WBFF/Fox45 | Baltimore, MD</div>
                             <p> <li>Scripted and cut video/sound for VOs, VOSOTs, and readers (RDR) for timely newscasts</li>
