--- a/about/index.html
+++ b/about/index.html
@@ -83,6 +83,15 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><FONT COLOR=800000>September 2024 - Present</span></div>
                     </div>
+                  <h3 class="mb-0"> <FONT COLOR=800000>Reporter/Producer/Production Member</h3>
+                            <div class="subheading mb-3"><FONT COLOR=000000>Capital News Service (TV) | College Park, MD</div>
+                            <p>
+                                <li>Writing and editing broadcast stories & packages for biweekly, 30-minute newscasts on YouTube</li>
+                                <li>Producing and stacking a rundown with graphics and shot format with back timing for each newscast</li>
+                                <li>Assisting live newscasts with technical directing, camera, teleprompter, and field-producing live shots</li></p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary"><FONT COLOR=800000>September 2024 - Present</span></div>
+                    </div>
                     <!-->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1"><!-->
