--- a/about/index.html
+++ b/about/index.html
@@ -68,26 +68,90 @@
             </section>
             <hr class="m-0" />
             <!-- Experience-->
-       <!-- Experience -->
+     <!-- Experience -->
 <section class="resume-section" id="resume"> 
   <div class="resume-section-content">
     <h2 class="mb-5" style="color:#800000;">Experience</h2>
 
+    <!-- Capital News Service -->
     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
       <div class="flex-grow-1">
-        <h3 class="mb-0" style="color:#800000;">Reporter/Producer/Production Member</h3>
-        <div class="subheading mb-3" style="color:#000;">Capital News Service (TV) | College Park, MD</div>
+        <h3 class="mb-0" style="color:#800000;">Reporter / Producer / Production Member</h3>
+        <div class="subheading mb-3" style="color:#000000;">Capital News Service (TV) | College Park, MD</div>
         <ul>
-          <li>Writing and editing broadcast stories & packages for biweekly, 30-minute newscasts on YouTube</li>
+          <li>Writing and editing broadcast stories &amp; packages for biweekly, 30-minute newscasts on YouTube</li>
           <li>Producing and stacking a rundown with graphics and shot format with back timing for each newscast</li>
           <li>Assisting live newscasts with technical directing, camera, teleprompter, and field-producing live shots</li>
         </ul>
       </div>
       <div class="flex-shrink-0">
-        <span class="text-primary" style="color:#800000;">September 2024 - Present</span>
+        <span style="color:#800000;">September 2024 - Present</span>
       </div>
     </div>
-    
+
+    <!-- Executive Producer -->
+    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+      <div class="flex-grow-1">
+        <h3 class="mb-0" style="color:#800000;">Executive Producer</h3>
+        <div class="subheading mb-3" style="color:#000000;">Terrapin Sports Central | College Park, MD</div>
+        <ul>
+          <li>Lead content planner and oversight for a team of producers and reporters, using Rundown Creator (web-based) to structure weekly studio shows</li>
+          <li>Creative storytelling across multiple platforms, including feature video packages, web articles, game recaps, and in-studio segments</li>
+          <li>Former Associate Producer and TV Reporter from September 2022 - April 2025</li>
+        </ul>
+      </div>
+      <div class="flex-shrink-0">
+        <span style="color:#800000;">April 2025 - Present</span>
+      </div>
+    </div>
+
+    <!-- Baltimore Fishbowl -->
+    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+      <div class="flex-grow-1">
+        <h3 class="mb-0" style="color:#800000;">Summer News Intern</h3>
+        <div class="subheading mb-3" style="color:#000000;">Baltimore Fishbowl | Baltimore, MD</div>
+        <ul>
+          <li>Wrote compelling feature and hard news stories for Baltimore City and surrounding counties</li>
+          <li>Collaborated with editors to increase social media engagement through weekend event videos</li>
+          <li>Utilized WordPress website management to publish over 30 stories</li>
+        </ul>
+      </div>
+      <div class="flex-shrink-0">
+        <span style="color:#800000;">June 2025 - August 2025</span>
+      </div>
+    </div>
+
+    <!-- Baltimore Sun -->
+    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+      <div class="flex-grow-1">
+        <h3 class="mb-0" style="color:#800000;">Contributor</h3>
+        <div class="subheading mb-3" style="color:#000000;">Baltimore Sun Media Group | Howard County, MD</div>
+        <ul>
+          <li>Pitched hard news and feature stories that were published in <em>The Howard County Times</em> &amp; <em>The Carroll County Times</em></li>
+          <li>Worked with editor to meet deadlines amid semester coursework</li>
+        </ul>
+      </div>
+      <div class="flex-shrink-0">
+        <span style="color:#800000;">September 2023 - November 2023</span>
+      </div>
+    </div>
+
+    <!-- WBFF -->
+    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+      <div class="flex-grow-1">
+        <h3 class="mb-0" style="color:#800000;">News Intern</h3>
+        <div class="subheading mb-3" style="color:#000000;">WBFF/Fox45 | Baltimore, MD</div>
+        <ul>
+          <li>Scripted and cut video/sound for VOs, VOSOTs, and readers (RDR) for timely newscasts</li>
+          <li>Wrote web stories from morning show content, press releases, and press conferences</li>
+          <li>Shadowed and assisted on-air reporters and photographers in daily reporting</li>
+        </ul>
+      </div>
+      <div class="flex-shrink-0">
+        <span style="color:#800000;">May 2023 - August 2023 &amp; June 2024 - August 2024</span>
+      </div>
+    </div>
+
   </div>
 </section>
 
