--- a/about/index.html
+++ b/about/index.html
@@ -235,13 +235,13 @@
                             <h3 class="mb-0"><FONT COLOR=000000>Baltimore Fishbowl</h3>
                             <p>Over 10 weeks, I wrote over 30 stories - both hard news and longer feature stories. You can find all of them <a href="https://baltimorefishbowl.com/stories/author/eddy-calkins/" class="download-button" target="_blank">here</a><br>
                             </p>
-                    <li><a href="https://baltimorefishbowl.com/stories/new-baltimore-made-tv-show-goes-viral-and-its-just-the-pilot-episode/" target="_blank">(8/8/25) New Baltimore-made TV show goes viral – and it’s just the pilot episode</a></p></a> (one of the most engaged with stories on Baltimore Fishbowl's social media)
+                    <li><a href="https://baltimorefishbowl.com/stories/new-baltimore-made-tv-show-goes-viral-and-its-just-the-pilot-episode/" target="_blank">(8/8/25) New Baltimore-made TV show goes viral – and it’s just the pilot episode</a>(one of the most engaged with stories on Baltimore Fishbowl's social media)</p> 
                         </li>
-                    <li><a href="https://baltimorefishbowl.com/stories/hcc-faculty-union-reaches-tentative-deal-for-first-ever-union-contract-secure-4-raise/" target="_blank" class="download-button">(8/11/25) HCC faculty union reaches tentative deal for first-ever union contract, secure 4% raise</a></p></a> (first to report the news of a tentative contract)
+                    <li><a href="https://baltimorefishbowl.com/stories/hcc-faculty-union-reaches-tentative-deal-for-first-ever-union-contract-secure-4-raise/" target="_blank" class="download-button">(8/11/25) HCC faculty union reaches tentative deal for first-ever union contract, secure 4% raise</a> (first to report the news of a tentative contract)</p> 
                         </li>
-                    <li><a href="https://baltimorefishbowl.com/stories/watch-savannah-bananas-take-over-camden-yards/" target="_blank">(8/4/25) WATCH: Savannah Bananas take over Camden Yards</a></p></a>
+                    <li><a href="https://baltimorefishbowl.com/stories/watch-savannah-bananas-take-over-camden-yards/" target="_blank">(8/4/25) WATCH: Savannah Bananas take over Camden Yards</a></p>
                         </li>
-                    <li><a href="https://baltimorefishbowl.com/stories/one-of-a-kind-portrait-of-umd-school-of-medicines-founder-discovered-at-berthas-mussels/" target="_blank" class="download-button">(7/14/25) One-of-a-kind portrait of UMD School of Medicine’s founder discovered at Bertha’s Mussels</a></p></a> (story prompted a press release from the college, reposting by other local outlets, and <a href="https://www.dailymail.co.uk/news/article-14933205/painting-john-beal-davidge-maryland-mona-lisa.html" class="download-button" target="_blank">became international news.</a>
+                    <li><a href="https://baltimorefishbowl.com/stories/one-of-a-kind-portrait-of-umd-school-of-medicines-founder-discovered-at-berthas-mussels/" target="_blank" class="download-button">(7/14/25) One-of-a-kind portrait of UMD School of Medicine’s founder discovered at Bertha’s Mussels</a> (story prompted a press release from the college, reposting by other local outlets, and <a href="https://www.dailymail.co.uk/news/article-14933205/painting-john-beal-davidge-maryland-mona-lisa.html" class="download-button" target="_blank">became international news.</a></p> 
                         </li>
                   <br>
                         
