--- a/about/index.html
+++ b/about/index.html
@@ -73,6 +73,22 @@
   <div class="resume-section-content">
     <h2 class="mb-5" style="color:#800000;">Experience</h2>
 
+          <!-- NBC4 -->
+    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+      <div class="flex-grow-1">
+        <h3 class="mb-0" style="color:#800000;">News Intern (Academic Year)</h3>
+        <div class="subheading mb-3" style="color:#000000;">WRC-TV/NBC4 Washington | Washington D.C.</div>
+        <ul>
+          <li>Scripting and cutting video/sound for VOs, VOSOTs, and readers (RDR) for timely newscasts</li>
+          <li>Shadowing/assisting on-air reporters and photographers in daily reporting</li>
+          <li>Participating in morning pitch and producer meetings</li>
+        </ul>
+      </div>
+      <div class="flex-shrink-0">
+        <span style="color:#800000;">September 2025 - Present</span>
+      </div>
+    </div>
+
     <!-- Capital News Service -->
     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
       <div class="flex-grow-1">
