--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #800000;" bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Eddy Calkins</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile circle mx-auto mb-2" src="assets/img/profile1.jpg" width="1100"; height="1300" alt="Description" /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile circle mx-auto mb-2" src="assets/img/Eddy-1.jpeg" width="1100"; height="1300" alt="Description" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -79,7 +79,7 @@
         <h3 class="mb-0" style="color:#800000;">News Intern (Academic Year)</h3>
         <div class="subheading mb-3" style="color:#000000;">WRC-TV/NBC4 Washington | Washington D.C.</div>
         <ul>
-          <li>Scripting and cutting video/sound for VOs, VOSOTs, and readers (RDR) for timely newscasts</li>
+          <li>Scripting and cutting video/sound for VOs & VOSOTs for afternoon newscasts</li>
           <li>Shadowing/assisting on-air reporters and photographers in daily reporting</li>
           <li>Participating in morning pitch and producer meetings</li>
         </ul>
@@ -89,21 +89,6 @@
       </div>
     </div>
 
-    <!-- Capital News Service -->
-    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-      <div class="flex-grow-1">
-        <h3 class="mb-0" style="color:#800000;">Reporter / Producer / Production Member</h3>
-        <div class="subheading mb-3" style="color:#000000;">Capital News Service (TV) | College Park, MD</div>
-        <ul>
-          <li>Writing and editing broadcast stories &amp; packages for biweekly, 30-minute newscasts on YouTube</li>
-          <li>Producing and stacking a rundown with graphics and shot format with back timing for each newscast</li>
-          <li>Assisting live newscasts with technical directing, camera, teleprompter, and field-producing live shots</li>
-        </ul>
-      </div>
-      <div class="flex-shrink-0">
-        <span style="color:#800000;">September 2024 - Present</span>
-      </div>
-    </div>
 
     <!-- Executive Producer -->
     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -112,7 +97,7 @@
         <div class="subheading mb-3" style="color:#000000;">Terrapin Sports Central | College Park, MD</div>
         <ul>
           <li>Lead content planner and oversight for a team of producers and reporters, using Rundown Creator (web-based) to structure weekly studio shows</li>
-          <li>Creative storytelling across multiple platforms, including feature video packages, web articles, game recaps, and in-studio segments</li>
+          <li>Creative storytelling across multiple platforms, including feature video packages, web articles, game recaps, and in-studio segments.</li>
           <li>Former Associate Producer and TV Reporter from September 2022 - April 2025</li>
         </ul>
       </div>
@@ -121,13 +106,30 @@
       </div>
     </div>
 
+
+    <!-- Capital News Service -->
+    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+      <div class="flex-grow-1">
+        <h3 class="mb-0" style="color:#800000;">Reporter / Producer / Production Member</h3>
+        <div class="subheading mb-3" style="color:#000000;">Capital News Service (TV) | College Park, MD</div>
+        <ul>
+          <li>Wrote and edited broadcast stories & packages for biweekly, 30-minute newscasts on YouTube</li>
+          <li>Produced and stacked a rundown with graphics and shot format with back timing for each newscast</li>
+          <li>Assisted live newscasts with technical directing, camera, teleprompter, and field-producing live shots</li>
+        </ul>
+      </div>
+      <div class="flex-shrink-0">
+        <span style="color:#800000;">September 2024 - Present</span>
+      </div>
+    </div>
+      
     <!-- Baltimore Fishbowl -->
     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
       <div class="flex-grow-1">
         <h3 class="mb-0" style="color:#800000;">Summer News Intern</h3>
         <div class="subheading mb-3" style="color:#000000;">Baltimore Fishbowl | Baltimore, MD</div>
         <ul>
-          <li>Wrote compelling feature and hard news stories for Baltimore City and surrounding counties</li>
+          <li>Wrote compelling feature and hard news stories for Baltimore City and the surrounding counties</li>
           <li>Collaborated with editors to increase social media engagement through weekend event videos</li>
           <li>Utilized WordPress website management to publish over 30 stories</li>
         </ul>
