--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #800000;" bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Eddy Calkins</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile circle mx-auto mb-2" src="assets/img/Eddy-1.jpeg" width="1100"; height="1300" alt="Description" /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile circle mx-auto mb-2" src="assets/img/Eddy-1.jpeg" width="2100"; height="2300" alt="Description" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -119,7 +119,7 @@
         </ul>
       </div>
       <div class="flex-shrink-0">
-        <span style="color:#800000;">September 2024 - Present</span>
+        <span style="color:#800000;">September 2024 - December 2025</span>
       </div>
     </div>
       
