--- a/about/index.html
+++ b/about/index.html
@@ -184,9 +184,11 @@
                             <p>Produced 30-minute newscasts for Capital News Service (TV). This reel will be updated throughout the fall/winter. </p>
                 <li> <a href="https://youtu.be/wrfGBeGLJU0" class="download-button" target="_blank">Eddy Calkins - Fall 2024 Producer Reel </a></p></li>
                         <br>
+                        <!--sideline reporting
                         <h3 class="mb-0"><FONT COLOR=000000>Sideline Reporter Reel</h3>
                             <p>Reel of sideline reporting on-air hits during Big Ten Plus live broadcasts. </p>
                 <li> <a href="https://youtu.be/wrfGBeGLJU0" class="download-button" target="_blank">Eddy Calkins - Sideline Reporter Reel </a></p></li>
+                        -->
                         <br>
                             <h3 class="mb-0"><FONT COLOR=000000>Video/Feature Packages</h3>
                             <p>Video/feature packages from <a href="https://terrapinsportscentral.com" target="_blank"> Terrpain Sports Central</a> and courses at Merrill College.</p>
