--- a/about/index.html
+++ b/about/index.html
@@ -52,7 +52,8 @@
                     </div>
                     <p class="lead mb-5"><FONT COLOR=000000>Hi! I’m Eddy Calkins, a senior at the University of Maryland (College Park). I’m majoring in journalism at the Philip Merrill College of Journalism with a minor in linguistics. My passion and focus is broadcast journalism — producing and reporting on stories that matter to local communities. <br><br> I created this portfolio using HTML and CSS code, and published it through GitHub. You can use the menu or scroll down to see my portfolio and resume. Feel free to reach out if you have any questions!</p>
                         <p>RESUME:<br>  <a href="calkins-eddy-resume.pdf" download="calkins-eddy-resume.pdf" class="download-button" target="_blank">calkins-eddy-resume.pdf</a>    <br> <br></p>
-                         <p>PRODUCER REEL (from FALL 2024):<br>  <a href="https://youtu.be/wrfGBeGLJU0" class="download-button" target="_blank">Eddy Calkins - Producer Reel</a>    <br> <br></p>
+                         <p>PRODUCING REEL (from FALL 2024):<br>  <a href="https://youtu.be/wrfGBeGLJU0" class="download-button" target="_blank">Eddy Calkins - Producer Reel</a>    <br> <br>
+                         <p>REPORTING REEL:<br>  <a href="https://eddycalkins.github.io/ejc/about/" class="download-button" target="_blank">Coming Soon!</a>    <br> <br </p>
 
                            
                     <div class="social-icons">
@@ -180,9 +181,9 @@
                     <h2 class="mb-5">Broadcast Clips <FONT COLOR=800000></h2>
                     <p>  <div class="flex-grow-1">
                         
-                     <h3 class="mb-0"><FONT COLOR=000000>Newscast Reel</h3>
-                            <p>Produced 30-minute newscasts for Capital News Service (TV). This reel will be updated throughout the fall/winter. </p>
-                <li> <a href="https://youtu.be/wrfGBeGLJU0" class="download-button" target="_blank">Eddy Calkins - Fall 2024 Producer Reel </a></p></li>
+                     <h3 class="mb-0"><FONT COLOR=000000>Audio Story</h3>
+                            <p>The Mic Behind the Mic: David Moulton. An audio story about David Moulton, a spotter for CBS's Gary Danielson & ESPN's Troy Aikman. He works with the football broadcasters to give them real-time information as the game goes on. </p>
+                <li> <a href="https://drive.google.com/file/d/1yIlIii8DtN7ddk3QmYoeiXDF63_waFr1/view?usp=sharing" class="download-button" target="_blank">Click here to list </a></p></li>
                         <br>
                         <!--sideline reporting
                         <h3 class="mb-0"><FONT COLOR=000000>Sideline Reporter Reel</h3>
