--- a/about/index.html
+++ b/about/index.html
@@ -52,7 +52,7 @@
                     </div>
                     <p class="lead mb-5"><FONT COLOR=000000>Hi! I’m Eddy Calkins, a senior at the University of Maryland (College Park). I’m majoring in journalism at the Philip Merrill College of Journalism with a minor in linguistics. My passion and focus is broadcast journalism — producing and reporting on stories that matter to local communities. <br><br> I created this portfolio using HTML and CSS code, and published it through GitHub. You can use the menu or scroll down to see my portfolio and resume. Feel free to reach out if you have any questions or comments!</p>
                         <p>RESUME:<br>  <a href="calkins-eddy-resume.pdf" download="calkins-eddy-resume.pdf" class="download-button" target="_blank">calkins-eddy-resume.pdf</a>    <br> <br></p>
-                         <p>PRODUCING REEL (from FALL 2024):<br>  <a href="https://youtu.be/wrfGBeGLJU0" class="download-button" target="_blank">Eddy Calkins - Producer Reel</a>    <br> <br>
+                         <p>PRODUCING REEL (updated February 2026):<br>  <a href="https://youtu.be/6uCqdOdgfkE" class="download-button" target="_blank">Eddy Calkins - Producer Reel</a>    <br> <br>
                          <p>REPORTING REEL:<br>  <a href="https://eddycalkins.github.io/ejc/about/" class="download-button" target="_blank">Coming Soon!</a>    <br> <br </p>
 
                            
