--- a/about/index.html
+++ b/about/index.html
@@ -78,9 +78,10 @@
     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
       <div class="flex-grow-1">
         <h3 class="mb-0" style="color:#800000;">News Intern (Academic Year)</h3>
-        <div class="subheading mb-3" style="color:#000000;">WRC-TV/NBC4 Washington | Washington D.C.</div>
+        <div class="subheading mb-3" style="color:#000000;"> <img class="img-fluid img-profile circle mx-auto mb-2" src="https://en.wikipedia.org/wiki/WRC-TV" width="1000"; height="1000" alt="Description" /> WRC-TV/NBC4 Washington | Washington D.C.</div>
         <ul>
-          <li>Scripting and cutting video/sound for VOs & VOSOTs for afternoon newscasts</li>
+          <li>Producing multimedia content for afternoon newscasts and breaking news </li>
+           <li> Supporting digital team and on-air reporters with social media storytelling </li>
           <li>Shadowing/assisting on-air reporters and photographers in daily reporting</li>
           <li>Participating in morning pitch and producer meetings</li>
         </ul>
